--- a/assessment/js/manifest.json
+++ b/assessment/js/manifest.json
@@ -13,7 +13,7 @@
             "type": "image/png"
         },
         {
-            "src": "/icons/frame_67.png",
+            "src": "/icons/Frame 67.png",
             "sizes": "192x192",
             "type": "image/png"
         },
