--- a/assessment/js/manifest.json
+++ b/assessment/js/manifest.json
@@ -8,17 +8,17 @@
     "description": "A progressive web app version of Sammy's DECO7140 website.",
     "icons": [
         {
-            "src": "/icons/Frame 66.png",
+            "src": "./icons/Frame-66.png",
             "sizes": "48x48",
             "type": "image/png"
         },
         {
-            "src": "/icons/Frame 67.png",
+            "src": "./icons/Frame-67.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "/icons/Frame 68.png",
+            "src": "./icons/Frame-68.png",
             "sizes": "512x512",
             "type": "image/png"
         }
